<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_tour_market"
        android:icon="@drawable/ic_search_black"
        android:title="@string/title_tour_market"
        android:enabled="true"
        />

    <item
        android:id="@+id/navigation_tours"
        android:icon="@drawable/ic_tourist"
        android:title="@string/title_tours"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"
        android:enabled="true"/>


</menu>
...
